--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,19 @@ name = "zero2prod"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"]}
+config = "0.11"
+
+[dependencies.sqlx]
+version = "0.5.7"
+default-features = false
+features = [
+"runtime-actix-rustls",
+"macros",
+"postgres",
+"uuid",
+"chrono",
+"migrate"
+]
 
 [dev-dependencies]
 reqwest = "0.11"
